# Morpheus

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/morpheus/: __init__.py
src/morpheus/analysis/: __init__.py  defi.py  invariant.py  taint.py
src/morpheus/hoa/: __init__.py  automaton.py
src/morpheus/parser/: __init__.py  ast.py  solidity.py  vyper.py
src/morpheus/specification/: __init__.py  grammar.py  language.py
src/morpheus/symbolic/: __init__.py  engine.py  operations.py  state.py  values.py
src/morpheus/theorem/: __init__.py  counterexample.py  prover.py
src/morpheus/vulnerability/: __init__.py  detector.py  patterns.py
tests/: test_morpheus.py
